Refine alignment and fix canvas-shadow visibility
- Wrap canvas-shadow and canvas-container inside a new div to resolve visibility issues
- Rename .title-controls to .control-panel in HTML and CSS
- Improve Styling and tweaked text alignment
- Remove unnecessary elements from the HTML

--- a/app/style.css
+++ b/app/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'roboto', sans-serif;
-    background-color: #D4E2D4;
+    background-color: #27374D;
 }
 
 .window {
@@ -28,7 +28,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 1000px;
+    width: 1160px;
 }
 
 .app-border {
@@ -38,16 +38,19 @@ body {
     justify-content: space-between;
     background-color: #e85432;
     padding: 50px 50px;
-    padding-left: 20px;
+    padding-left: 15px;
     border-radius: 24px;
     border-bottom: 10px solid #0000002a;
+    border-left: 10px solid #0000002a;
 }
 
 
 
-sup {
-    vertical-align: super;
-    font-size: smaller;
+.canvas-container {
+    width: 900px;
+    height: 450px;
+    background-color: rgb(212, 212, 212);
+    display: grid;
 }
 
 .canvas-shadow {
@@ -56,40 +59,33 @@ sup {
     border-radius: 10px 10px 0 0;
 }
 
-.canvas-container {
-    flex: 1;
-    height: 451px;
-    width: 1200px;
-    background-color: rgb(212, 212, 212);
-    display: grid;
-    border-bottom: 1px solid #0000003e;
-    border-right: 1px solid #0000003e;
-    margin-left: 20px;
-}
 
-.title-controls {
-    width: 170px;
+.control-panel {
     flex-direction: column;
     align-items: flex-start;
     color: #fdb86a;
     display: flex;
     font-size: 18px;
     justify-content: space-between;
+    width: 170px;
 }
 
 .app-title {
     line-height: 80%;
-    width: 170px;
     text-align: center;
     border-radius: 16px;
     font-family: 'Mrs Sheppards';
-    font-size: 55px;
+    font-size: 55.5px;
     color: #fdb86a;
     text-shadow: 0px 1px #0000002a;
     margin-bottom: 80px;
+    align-self: center;
 }
 
-
+sup {
+    vertical-align: super;
+    font-size: smaller;
+}
 
 .control-container {
     display: flex;
@@ -127,4 +123,10 @@ sup {
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
+}
+
+.grid-square {
+    border-top: 1px solid #0000002a;
+    border-left: 1px solid #0000002a;
+    transition: all 0.2s ease;
 }
